<resources>
    <string name="app_name">bluetooth connectivity</string>
    <string name="press_button_to_scan">Press button to scan...</string>
    <string name="refresh_connected_devices">Refresh Connected Devices</string>
    <string name="sony_battery_monitor">Sony Battery Monitor</string>
    <string name="device_name">Device Name</string>
    <string name="_00_00_00_00_00_00">00:00:00:00:00:00</string>
    <string name="device_type">🎧</string>
    <string name="Battery_percentage">🔋 --%</string>
    <string name="last_seen_just_now">last seen just now</string>
</resources>